# vscode-ansible

./:  tsdoc.json  .ansible-lint  .c8rc  .c8rc.json  .coderabbit.yaml  .cspell.json  .depcheckrc.yml  .dockerignore  .editorconfig  .env  .envrc  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  .gitleaks.toml  .groovylintrc.json  .issuetracker  .lsp.json  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .mcp.json  .miserc.toml  .mocharc.js  .mocharc.yml  .ncurc.json  .npmignore  .npmrc  .nycrc.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .prettierrc.yaml  .readthedocs.yml  .skillmark.toml  .sonarcloud.properties  .tool-versions  .vscode-test.mjs  .vscodeignore  (+73 more)
.agents/skills/: README.md
.claude/: settings.json
.claude-plugin/: plugin.json
.config/: Containerfile  Dockerfile  Taskfile_shared.yml  constraints.txt  dictionary.txt  mise.ci.toml  mise.local.toml  mise.toml  mise.unix.toml  miserc.toml  requirements-devel.in  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  actionlint.yaml  dependabot.yml  pull_request_template.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ack.yml  builder.yml  ci-failure-analysis.yml  ci.yaml  ci.yml  comment-ci-runner.yml  comment-test.yml  comment-triggered-ci.yml  commitlint.yml  coverage.yml  dedupe.yml  docs-deploy.yml  next.yml  npm.yml  post.yml  pr-comment-trigger-TEST.yml  pr-comment-trigger.yml  pre.yml  prepare-release.yml  publish.yml  push.yml  release-drafter.yml  release-vsix.yml  release.yaml  release.yml  stage_ui_test_suite.yml  stats.yml  task.yml  tox.yml  vscode.yml  wsl2-ui.yml
.husky/: pre-commit
.sdlc/: user-stories.coverage.txt  user-stories.yaml
.sdlc/adrs/: ADR-001-service-based-architecture.md  ADR-002-centralized-plugin-doc-cache.md  ADR-003-ee-via-devcontainers.md  ADR-004-intentional-exclusions-from-main.md  ADR-005-architectural-invariants.md  ADR-006-esbuild-bundler.md  ADR-007-npm-exec-over-npx.md  ADR-008-strict-eslint-configuration.md  ADR-009-jsdoc-enforcement.md  ADR-010-shared-ui-component-layer.md  ADR-011-package-architecture.md  ADR-012-mcp-tool-parity.md  ADR-013-scm-plugin-docs-via-shallow-clone.md  README.md  (+13 more)
.tekton/: vscode-ansible-pipeline.yaml  vscode-ansible-pull-request.yaml  vscode-ansible-push.yaml
__mocks__/: vscode.ts
assets/: artwork.afdesign  icon.afdesign
client/: package-lock.json  package.json  tsconfig.tsbuildinfo  webpack.config.js
doc/: development.md
docs/: README.md  astro.config.mjs  changelog.md  conf.py  configuration.md  contact.md  contributing.md  development.md  feature-ansible-ide-experience.md  index.md  llm-providers.md  mcp-api-documentation.md  mcp-server-distribution.md  package.json  requirements.in  requirements.txt  settings.md  spelling_wordlist.txt  tsconfig.json  usage-data.md
docs/mcp/: api.md  (+2 more)
examples/: REAME.md  ansible-navigator.yml  ansible.cfg  devfile.yaml  dynamic_inventory.py  execution-environment.yml  inventory  playbook_for_adjacent_collection.yml  with_double_ext.ansible.yml  with_modelines.yml  without_modelines.yml
media/: codicon.css  main.css  style.css
patches/: @vscode__test-cli@0.0.12.patch  wdio-vscode-service@6.1.4.patch
playbooks/: dump_secrets.yml
resources/: best_practises.md
sample/: sample.semanticLanguage
schemas/: ansible-patterns.json
scripts/: .eslintrc.js  build-plugin.sh  build-syntaxes  build.mjs  check-dependencies.js  check-script-docs.mjs  check_skill_frontmatter.py  generate-skill-content.mjs  help.mjs  install-test-extensions.mjs  story-coverage.mjs  tsconfig.esm.json  tsconfig.json  tsconfig.umd.json  xvfb-run.mjs
server/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
skills/: README.md
src/: ansibleLanguageService.ts  api.ts  docsView.ts  env.d.ts  examplesView.ts  extension.ts  extensionConflicts.ts  formatAnsibleMetaData.ts  python.ts  server.ts  setPythonInterpreter.ts  settings.ts  telemetry.ts  treeView.ts  webviewHtml.ts
syntaxes/: README.md  ansible.tmLanguage.json  ansible.tmLanguage.plist  injection.tmLanguage.plist  plist2xml.py  xml2plist.py
test/: README.md  __init__.py  consoleOutput.ts  fix-junit-reports.ts  helper.ts  index.ts  minimal-reporter.js  mochaHooks.ts  rootMochaHooks.ts  setup.ts  testRunner.ts  tsconfig.json  utils.ts
tests/: conftest.py
tools/: README.md  _utils.sh  analyze_ci_failures.py  analyze_ci_failures.sh  builder.sh  clone-sibling.sh  compare_devcontainer.sh  compare_devfile.sh  container-build.sh  convert-als-coverage-lcov.sh  coverage-all.sh  debug-workflow-runs.sh  dirty.sh  docs_summary.py  ensure-chromedriver.mts  ensure-chromedriver.sh  finish.mts  fix-als-js-map.sh  get-image-version  get-image-version.js  get-image-version.mts  get-marketplace-version.sh  helper  helper.mts  install.sh  mk-cobertura.mts  mk_changelog.sh  package.sh  package.ts  precheck.py  precheck.sh  prepare.ps1  prepare.ts  publish.sh  release.sh  run-ui-test-with-mock-lightspeed-server.sh  sanitize-logs  sanitize-logs.py  settings-doc-generator.ts  test-e2e.ts  (+11 more)
webviews/: AddPatternPageApp.vue  AddPluginPageApp.vue  CreateAnsibleCollectionApp.vue  CreateAnsibleProject.vue  CreateAnsibleProjectApp.vue  CreateDevcontainerApp.vue  CreateDevfileApp.vue  CreateExecutionEnvApp.vue  CreateRoleApp.vue  FormPageLayout.vue  LlmProviderApp.vue  QuickLinksApp.vue  RequirementsBanner.vue  WelcomePageApp.vue  add-pattern.html  add-pattern.ts  add-plugin-page.html  add-plugin.html  add-plugin.ts  create-ansible-collection.html  create-ansible-collection.ts  create-ansible-project.html  create-ansible-project.ts  create-devcontainer.html  create-devcontainer.ts  create-devfile.html  create-devfile.ts  create-execution-env.html  create-execution-env.ts  create-role.html  create-role.ts  llm-provider.html  llm-provider.ts  quick-links.html  quick-links.ts  vite-env.d.ts  welcome-page.html  welcome-page.ts
(+1110 files in other folders)
