[project]
name = "vscode-ansible"
requires-python = ">=3.11"
dynamic = ["version"]

[dependency-groups]
dev = [
  "ansible-core>=2.13.0",
  "ansible-lint>=6.8.7",
  "ansible-navigator>=25.5.0",
  "cython>=3.0.5 ; python_full_version >= '3.12'",
  "mkdocs-ansible>=25.6.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material-extensions>=1.3.1",
  "mypy>=1.17.1",
  "pip>=22.3.1",
  "pre-commit>=4.0.1",
  "pre-commit-uv>=4.1.4",
  "typing-inspect>=0.8.0,<0.10.0",
  "uv>=0.4.29",
]

[tool.codespell]
builtin = "clear,rare,code"
check-filenames = true
check-hidden = true
ignore-words-list = ["als", "ro", "stdio", "isPlay", "afterAll"]
ignore-words = ".config/dictionary.txt"
skip = ".cache,out,node_modules,.mypy_cache,.ruff_cache,site,codicon.css,yarn.lock,package-lock.json,.vscode-test,.git,.yarn,dictionary.txt,settings.md,.eslintcache,.venv"

# We have no python tests in this project, but we keep this config to prevent
# vscode python extension from showing errors while trying to collect tests.
[tool.pytest.ini_options]
norecursedirs = [
  "*.egg",
  ".cache",
  ".eggs",
  ".git",
  ".github",
  ".mypy_cache",
  ".projects",
  ".tox",
  "build",
  "collections",
  "dist",
  "docs",
  "out",
  "node_modules",
]

[tool.ruff]
exclude = ["examples"]
fix = true
line-length = 100
target-version = "py310"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.uv]
package = false

[tool.uv.pip]
annotation-style = "line"
custom-compile-command = "task -e deps"
no-emit-package = [
  "ansible-core",
  "exceptiongroup",  # <py311
  "pip",
  "resolvelib",
  "tomli",  # <py311
  "typing-extensions",
  "typing-inspect",
  "setuptools",
  "wheel",
  "uv",
]
