# cspell:ignore tombi addopts minversion
[project]
name = "vscode-ansible"
requires-python = ">=3.11,<3.14"
dynamic = ["version"]

[dependency-groups]
dev = [
  "ansible-core>=2.13.0",
  "ansible-creator>=25.11.0",
  "ansible-dev-tools>=25.11.0",
  "ansible-lint>=6.8.7",
  "ansible-navigator>=25.5.0",
  "cython>=3.0.5 ; python_full_version >= '3.12'",
  "mkdocs-ansible>=25.6.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material-extensions>=1.3.1",
  "mypy>=1.17.1",
  "pip>26.0.0",  # security reasons
  "podman-compose>=1.5.0",
  "prek>=0.3.1",
  "pytest-github-actions-annotate-failures>=0.3.0",
  "pytest-rerunfailures>=16.1",
  "selenium>=4.40.0",
  "typing-inspect>=0.8.0,<0.10.0",
  "uv>=0.4.29",
]
lint = [
  "codespell[toml]>=2.4.1",
  "ruff>=0.14.3",
  "shellcheck-py>=0.11.0.1",
  "tombi>=0.6.40",
]

[tool.codespell]
builtin = "clear,rare,code"
check-filenames = true
check-hidden = true
ignore-words-list = ["als", "ro", "stdio", "isPlay", "afterAll", "pullrequest"]
ignore-words = ".config/dictionary.txt"
skip = ".cache,.yarn,dist,out,node_modules,.mypy_cache,.ruff_cache,site,codicon.css,yarn.lock,package-lock.json,.vscode-test,.git,dictionary.txt,settings.md,.eslintcache,.venv,media,.ansible"

[tool.distutils.egg_info]
egg_base = "out"

[tool.mypy]
color_output = true
exclude = "(.ansible|out|syntaxes).*"

# We have no python tests in this project, but we keep this config to prevent
# vscode python extension from showing errors while trying to collect tests.
[tool.pytest]
# do not add options here as this will likely break either console runs or IDE
# integration like vscode or pycharm
addopts = [
  "--durations=10",
  "--junit-xml=out/junit/ui-selenium-test-results.xml",
  "--reruns-delay=120",
  "--reruns=3",
  "-m=vscode",
  "-v"
]
filterwarnings = [
  "error",
]
junit_logging = "all"
log_cli = true
log_cli_level = "INFO"
markers = [
  "lightspeed: mark tests related to lightspeed that require backend credentials",
  "modify_settings: modify vscode settings.json before/after test",
  "vscode: mark tests for vscode extension",
  "vscode_trial: mark tests related to lightspeed trial",
]
minversion = "9.0"  # toml config changes
norecursedirs = [
  "*.egg",
  ".ansible",
  ".cache",
  ".eggs",
  ".git",
  ".github",
  ".mypy_cache",
  ".projects",
  ".tox",
  ".vscode-test",
  "build",
  "collections",
  "dist",
  "docs",
  "node_modules",
  "out",
]
strict_markers = true
strict_xfail = true
testpaths = ["test/selenium/ui"]

[tool.ruff]
cache-dir = "./.cache/.ruff"
exclude = ["examples", "packages", "test/testFixtures"]
fix = true
# Same as Black.
line-length = 88
preview = true
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "COM812",  # conflicts with ISC001 on format
  "CPY001",  # missing-copyright-notice
  "D203",  # incompatible with D211
  "D213",  # incompatible with D212
  "E501",  # we use black
  "ERA001",  # auto-removal of commented out code affects development and vscode integration
  "INP001",  # "is part of an implicit namespace package", all false positives
  "ISC001",  # conflicts with COM812 on format
  "PLW2901",  # PLW2901: Redefined loop variable
  "RET504",  # Unnecessary variable assignment before `return` statement
  # temporary ignores:
  "ANN401",
  "B005",
  "PERF203",
  "PLR2004",
  "ARG001",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["DOC201", "DOC501", "PLC2701", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.uv]
package = false
default-groups = "all"

[tool.uv.pip]
annotation-style = "line"
custom-compile-command = "task -e deps"
no-emit-package = [
  "ansible-core",
  "exceptiongroup",  # <py311
  "pip",
  "resolvelib",
  "tomli",  # <py311
  "typing-extensions",
  "typing-inspect",
  "setuptools",
  "wheel",
  "uv",
]
