[options.extras_require]
test =
    ansible-lint>=6.0.2
    click
    lxml
    pre-commit
    pyparsing
docs =
    MarkupSafe<2.1 # see https://github.com/pallets/jinja/issues/1585
    myst-parser[linkify] >= 0.18.0
    setuptools-scm >= 6.0.1
    Sphinx >= 5.0.2
    sphinx-ansible-theme >= 0.8.0
    sphinx-favicon >= 0.2
    sphinx-notfound-page >= 0.7.1
    sphinxcontrib-apidoc >= 0.3.0
    sphinxcontrib-towncrier >= 0.2.0a0
